--- a/app/src/main/res/layout/fragment_national_park.xml
+++ b/app/src/main/res/layout/fragment_national_park.xml
@@ -7,27 +7,48 @@
     android:layout_height="wrap_content"
     android:layout_margin="6dp">
 
-    <!-- Park Name -->
+    <ImageView
+        android:id="@+id/park_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:contentDescription="Park Image"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_gallery" />
+
     <TextView
         android:id="@+id/park_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:text="Park Name"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/park_image"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Park Description -->
     <TextView
         android:id="@+id/park_description"
-        android:text="Park Description"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/park_name"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="8dp"
+        android:ellipsize="end"
+        android:maxLines="4"
+        android:text="Description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/park_image"
+        app:layout_constraintTop_toBottomOf="@+id/park_name" />
 
-    <!-- TODO: Add park image -->
-    <!-- TODO: Add location or other details -->
+    <TextView
+        android:id="@+id/park_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Park Location"
+        android:textAppearance="?attr/textAppearanceListItem"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/park_image"
+        app:layout_constraintTop_toBottomOf="@id/park_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
